atualizei o valor da prova 3 e adicionei o valor/data do seminário

--- a/gsi526.html
+++ b/gsi526.html
@@ -80,7 +80,8 @@
 					<ul>
 					<li>Prova 1 - 30 pts <b>(08/10)</b></li>
 					<li>Prova 2 - 35 pts <b>(12/11)</b></li>
-					<li>Prova 3 - 35 pts <b>(17/12)</b> - <b><i>Aulas 10, 11, 12 e 13</i></b></li>
+					<li>Seminário - 15 pts <b>(11/12)</b>
+					<li>Prova 3 - 20 pts <b>(17/12)</b> - <b><i>Aulas 10, 11, 12 e 13</i></b></li>
 					</ul>
 					</div>
 					<b>Material:</b>
