update no site de modelagem de sw com as novas aulas

--- a/gsi522.html
+++ b/gsi522.html
@@ -80,7 +80,7 @@
 					<ul>
 					<li>Prova 1 - 35 pts <b>(09/10)</b></li>
 					<li>Prova 2 - 20 pts <b>(13/11)</b></li>
-					<li>Prova 3 - 15 pts <b>(11/12)</b></li>
+					<li>Prova 3 - 15 pts <b>(11/12)</b> - <b><i>Aulas 9, 10, 12, 13, 14 e 15</i></b></li>
 					<li>Trabalho - 30 pts <b>(12/12)</b></li>
 					</ul>
 					</div>
@@ -98,7 +98,12 @@
 						<li><i class="icon-book"></i><a href="aulas/gsi522/Aula9 - Arquitetura de SW.pptx"> Aula 9 - Arquitetura de Software</a></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi522/Aula10- SistemasDeControleDeVersao.pdf"> Aula 10 - Sistemas de Controle de Versão</a></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi522/Aula11 - ArgoUML_casos.pdf"> Aula 11 - ArgoUML: Diagrama de Casos de Uso</a></li>
-						<li><i class="icon-book"></i><a href="aulas/gsi522/Aula11- ArgoUML_classes.pdf"> Aula 11 - ArgoUML: Diagrama de Classes</a></li>	
+						<li><i class="icon-book"></i><a href="aulas/gsi522/Aula11- ArgoUML_classes.pdf"> Aula 11 - ArgoUML: Diagrama de Classes</a></li>
+						<li><i class="icon-book"></i><a href="aulas/gsi522/Aula12 - Conceitos de POO.pdf"> Aula 12 - Conceitos de POO</a></li>
+						<li><i class="icon-book"></i><a href="aulas/gsi522/Aula13 - Classes E Relacionamentos.pdf"> Aula 13 - Classes e Relacionamentos</a></li>
+						<li><i class="icon-book"></i><a href="aulas/gsi522/Aula14 - Membros de Classes.pdf"> Aula 14 - Membros de Classes</a></li>
+						<li><i class="icon-book"></i><a href="aulas/gsi522/Aula15 - Idiomas de Programacao.pdf"> Aula 15 - Idiomas de Programação</a></li>
+						<li><i class="icon-book"></i><a href="aulas/gsi522/Aula16 - Componentes_Implantacao.pdf"> Aula 16 - Diagrama de Componentes e Implantação</a></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi522/trab_modelagem.pdf"> Trabalho Final</a></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi522/P1-HealthWatcher.pdf"> Projeto 1: Health-Watcher</a></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi522/P2-SigaEnsino.pdf"> Projeto 2: SIGA Ensino</a></li>
