--- a/gac023.html
+++ b/gac023.html
@@ -107,7 +107,7 @@
 						<li><i class="icon-book"></i><a href="aulas/gac023/exercicios_aula_26_set.rar"> Exercícios da aula de <b>26/09</b></a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gac023/exercicios_aula_31_out.rar"> Exercícios da aula de <b>31/10</b></a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gac023/exercicios_aula_07_nov.rar"> Exercícios da aula de <b>07/11</b></a></button></li>
-						<li><i class="icon-book"></i><a href="aulas/gac023/exercicios_aula_05_dez.rar"> <b>[NEW!]</b> Exercícios das aulas <b>07/11 até 05/12</b></a></button></li>
+						<li><i class="icon-book"></i><a href="aulas/gac023/exercicios_aula_05_dez.rar"> <b>[NEW!]</b> Exercícios das aulas de <b>07/11 até 05/12</b></a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gac023/resolucao_prova_2_pca.rar"> <b>[NEW!]</b> Resolução da Prova 2 de PCA </a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gac023/prova2_pca.pdf"> <b>[NEW!]</b> Prova 2 de PCA</b></a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gac023/exercicios2_pca.pdf"> Exercícios da lista para entrega <b>10/10</b></a></button></li>
