adicao das notas do seminario de esof

--- a/gsi526.html
+++ b/gsi526.html
@@ -107,7 +107,7 @@
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula11 - Conceitos de POO.pdf"> Aula 11 - Conceitos de POO</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula12 - Classes E Relacionamentos.pdf"> Aula 12 - Classes e Relacionamentos </a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula13 - Membros de Classes.pdf"> Aula 13 - Membros de Classes </a></button></li>
-						<li><i class="icon-book"></i><a href="aulas/gsi526/notas_esof.pdf"> <b>[NEW!]</b> Notas da segunda prova </a></button></li>
+						<li><i class="icon-book"></i><a href="aulas/gsi526/notas_esof.pdf"> <b>[NEW!]</b> Notas do seminário </a></button></li>
 						<!--<li><i class="icon-book"></i><a href="aulas/gsi526/aula5.pdf"> Aula 5</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/aula6.pdf"> Aula 6</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/aula7.pdf"> Aula 7</a></button></li>
