Notas finais de PCA

--- a/gac023.html
+++ b/gac023.html
@@ -107,13 +107,13 @@
 						<li><i class="icon-book"></i><a href="aulas/gac023/exercicios_aula_26_set.rar"> Exercícios da aula de <b>26/09</b></a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gac023/exercicios_aula_31_out.rar"> Exercícios da aula de <b>31/10</b></a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gac023/exercicios_aula_07_nov.rar"> Exercícios da aula de <b>07/11</b></a></button></li>
-						<li><i class="icon-book"></i><a href="aulas/gac023/exercicios_aula_05_dez.rar"> <b>[NEW!]</b> Exercícios das aulas de <b>07/11 até 05/12</b></a></button></li>
-						<li><i class="icon-book"></i><a href="aulas/gac023/resolucao_prova_2_pca.rar"> <b>[NEW!]</b> Resolução da Prova 2 de PCA </a></button></li>
-						<li><i class="icon-book"></i><a href="aulas/gac023/prova2_pca.pdf"> <b>[NEW!]</b> Prova 2 de PCA</b></a></button></li>
+						<li><i class="icon-book"></i><a href="aulas/gac023/exercicios_aula_05_dez.rar"> Exercícios das aulas de <b>07/11 até 05/12</b></a></button></li>
+						<li><i class="icon-book"></i><a href="aulas/gac023/resolucao_prova_2_pca.rar">  Resolução da Prova 2 de PCA </a></button></li>
+						<li><i class="icon-book"></i><a href="aulas/gac023/prova2_pca.pdf"> Prova 2 de PCA</b></a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gac023/exercicios2_pca.pdf"> Exercícios da lista para entrega <b>10/10</b></a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gac023/exercicios3_pca.pdf"> Exercícios da lista para entrega <b>31/10</b></a></button></li>
-						<li><i class="icon-book"></i><a href="aulas/gac023/notas_pca.pdf"> <b>[NEW!]</b> Notas Parciais </a></button></li>
-						<li><i class="icon-book"></i><a href="aulas/gac023/trabalho_pca.pdf"> <b>[NEW!]</b> Trabalho Final</a></button></li>
+						<li><i class="icon-book"></i><a href="aulas/gac023/trabalho_pca.pdf"> Trabalho Final</a></button></li>
+						<li><i class="icon-book"></i><a href="aulas/gac023/notas_pca.pdf"> <b>[NEW!]</b> Notas Finais </a></button></li>						
 						<!--<li><i class="icon-book"></i><a href="aulas/gac023/aula3.pdf"> Aula 3</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gac023/aula4.pdf"> Aula 4</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gac023/aula5.pdf"> Aula 5</a></button></li>
