coloquei o nome dos autores no artigo esem

--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
 					<div>
 						<span class="fh5co-post-date">November 10, 2017</span>
 						<h2><a href="esem17.html">Common Bug-fix Patterns: A Large-Scale Observational Study</a></h2>
+						<p><b>E. Campos</b>, M. Maia</p>
 						<p><i>Proceedings of the 11th ACM/IEEE International Symposium on Empirical Software Engineering and Measurement (ESEM), Markham, Canada, 10 pages, 2017.</i></p>
 						<button class="button"><a href="papers/esem17.pdf">Paper</a></button>
 						<button class="button"><a href="papers/esem17.bib">BibTex</a></button>
