adicao do gif de new

--- a/gac023.html
+++ b/gac023.html
@@ -113,7 +113,7 @@
 						<li><i class="icon-book"></i><a href="aulas/gac023/exercicios2_pca.pdf"> Exercícios da lista para entrega <b>10/10</b></a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gac023/exercicios3_pca.pdf"> Exercícios da lista para entrega <b>31/10</b></a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gac023/trabalho_pca.pdf"> Trabalho Final</a></button></li>
-						<li><i class="icon-book"></i><a href="aulas/gac023/notas_pca.pdf"> <b>[NEW!]</b> Notas Finais </a></button></li>						
+						<li><i class="icon-book"></i><a href="aulas/gac023/notas_pca.pdf"> <img src="images/new2.gif" alt="" height="11" width="28"> Notas Finais </a></button></li>						
 						<!--<li><i class="icon-book"></i><a href="aulas/gac023/aula3.pdf"> Aula 3</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gac023/aula4.pdf"> Aula 4</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gac023/aula5.pdf"> Aula 5</a></button></li>
