--- a/gsi538.html
+++ b/gsi538.html
@@ -69,7 +69,7 @@
 			<div class="page-title">
 				<img src="images/person_1.jpg" alt="Free HTML5 by FreeHTMl5.co">
 				<span>Disciplinas 1º Semestre de 2019 - Sistemas de Informação (UFU)</span>
-				<h2>GSI522 - Modelagem de Software</h2>
+				<h2>GSI538 - Projeto e Desenvolvimento de Sistemas de Informação 2</h2>
 			</div>
 		</div>
 		<div id="fh5co-main-content">
@@ -78,44 +78,24 @@
 					<div>
 					<b>Avaliação:</b>
 					<ul>
-					<li>Prova 1 - 25 pts <b>(09/04)</b></li>
-					<li>Prova 2 - 25 pts <b>(15/05)</b></li>
-					<li>Prova 3 - 25 pts <b>(03/07)</b></li>
-					<li>Trabalho - 25 pts <b>(09/07)</b></li>
+					<li>Prova 1 - 30 pts <b>(30/04)</b></li>
+					<li>Prova 2 - 35 pts <b>(18/06)</b></li>
+					<li>Trabalho - 35 pts <b>(09/07)</b></li>
 					</ul>
 					</div>
 					<b>Material:</b>
 					<div>
-						<ul>						
-						<li><i class="icon-book"></i><a href="aulas/gsi522/Aula1 - IntroduçãoModelagemSW.pptx"> Aula 1 - Introdução à Modelagem de Software</a></li>
-						<li><i class="icon-book"></i><a href="aulas/gsi522/Aula2 - Requisitos.pptx"> Aula 2 - Requisitos de Software</a></li>
-						<!--<li><i class="icon-book"></i><a href="aulas/gsi522/Aula3 - Casos de Uso.pptx"> Aula 3 - Diagrama de Casos de Uso</a></li>
-						<li><i class="icon-book"></i><a href="aulas/gsi522/Aula4 - Diagrama de Classes.pptx"> Aula 4 - Diagrama de Classes</a></li>
-						<li><i class="icon-book"></i><a href="aulas/gsi522/Aula5 - SequênciaComunicação.pptx"> Aula 5 - Diagramas de Sequência e Comunicação</a></li>
-						<li><i class="icon-book"></i><a href="aulas/gsi522/Aula6 - Estados.pptx"> Aula 6 - Diagrama de Estados</a></li>
-						<li><i class="icon-book"></i><a href="aulas/gsi522/Aula7 - Atividades.pptx"> Aula 7 - Diagrama de Atividades</a></li>
-						<li><i class="icon-book"></i><a href="aulas/gsi522/Aula8 - ResumoDiagramas.pdf"> Aula 8 - Resumo dos Diagramas UML</a></li>
-						<li><i class="icon-book"></i><a href="aulas/gsi522/Aula9 - Arquitetura de SW.pptx"> Aula 9 - Arquitetura de Software</a></li>
-						<li><i class="icon-book"></i><a href="aulas/gsi522/Aula10- SistemasDeControleDeVersao.pdf"> Aula 10 - Sistemas de Controle de Versão</a></li>
-						<li><i class="icon-book"></i><a href="aulas/gsi522/Aula11 - ArgoUML_casos.pdf"> Aula 11 - ArgoUML: Diagrama de Casos de Uso</a></li>
-						<li><i class="icon-book"></i><a href="aulas/gsi522/Aula11- ArgoUML_classes.pdf"> Aula 11 - ArgoUML: Diagrama de Classes</a></li>
-						<li><i class="icon-book"></i><a href="aulas/gsi522/Aula12 - Conceitos de POO.pdf"> Aula 12 - Conceitos de POO</a></li>
-						<li><i class="icon-book"></i><a href="aulas/gsi522/Aula13 - Classes E Relacionamentos.pdf"> Aula 13 - Classes e Relacionamentos</a></li>
-						<li><i class="icon-book"></i><a href="aulas/gsi522/Aula14 - Membros de Classes.pdf"> Aula 14 - Membros de Classes</a></li>
-						<li><i class="icon-book"></i><a href="aulas/gsi522/Aula15 - Idiomas de Programacao.pdf"> Aula 15 - Idiomas de Programação</a></li>
-						<li><i class="icon-book"></i><a href="aulas/gsi522/Aula16 - Componentes_Implantacao.pdf"> Aula 16 - Diagrama de Componentes e Implantação</a></li>
-						<li><i class="icon-book"></i><a href="aulas/gsi522/trab_modelagem.pdf"> Trabalho Final</a></li>
-						<li><i class="icon-book"></i><a href="aulas/gsi522/P1-HealthWatcher.pdf"> Projeto 1: Health-Watcher</a></li>
-						<li><i class="icon-book"></i><a href="aulas/gsi522/P2-SigaEnsino.pdf"> Projeto 2: SIGA Ensino</a></li>
-						<li><i class="icon-book"></i><a href="aulas/gsi522/P3-Voos.pdf"> Projeto 3: Sistema de Voos</a></li>
-						<li><i class="icon-book"></i><a href="aulas/gsi522/P4-Systrack.pdf"> Projeto 4: Systrack</a></li>
-						<li><i class="icon-book"></i><a href="aulas/gsi522/notas_modelagem.pdf"> <img src="images/new2.gif" alt="" height="11" width="28"> Notas Finais </a></button></li>
-						<!--<li><i class="icon-book"></i><a href="aulas/gsi522/aula5.pdf"> Aula 5</a></li>
-						<li><i class="icon-book"></i><a href="aulas/gsi522/aula6.pdf"> Aula 6</a></li>
-						<li><i class="icon-book"></i><a href="aulas/gsi522/aula7.pdf"> Aula 7</a></li>
-						<li><i class="icon-book"></i><a href="aulas/gsi522/aula8.pdf"> Aula 8</a></li>
-						<li><i class="icon-book"></i><a href="aulas/gsi522/aula9.pdf"> Aula 9</a></li>
-						<li><i class="icon-book"></i><a href="aulas/gsi522/aula10.pdf"> Aula 10</a></li>-->
+						<ul>
+						<li><i class="icon-book"></i><a href="aulas/gsi538/Aula 1 - Requisitos de SW.pptx"> Aula 1 - Requisitos de Software</a></button></li>
+						<li><i class="icon-book"></i><a href="aulas/gsi538/Aula 2 - Arquitetura de SW.pptx"> Aula 2 - Arquitetura de Software</a></button></li>
+						<!--<li><i class="icon-book"></i><a href="aulas/gsi530/aula3.pdf"> Aula 3</a></button></li>
+						<li><i class="icon-book"></i><a href="aulas/gsi530/aula4.pdf"> Aula 4</a></button></li>
+						<li><i class="icon-book"></i><a href="aulas/gsi530/aula5.pdf"> Aula 5</a></button></li>
+						<li><i class="icon-book"></i><a href="aulas/gsi530/aula6.pdf"> Aula 6</a></button></li>
+						<li><i class="icon-book"></i><a href="aulas/gsi530/aula7.pdf"> Aula 7</a></button></li>
+						<li><i class="icon-book"></i><a href="aulas/gsi530/aula8.pdf"> Aula 8</a></button></li>
+						<li><i class="icon-book"></i><a href="aulas/gsi530/aula9.pdf"> Aula 9</a></button></li>
+						<li><i class="icon-book"></i><a href="aulas/gsi530/aula10.pdf"> Aula 10</a></button></li>-->
 						</ul>
 					</div>
 				</div>
