--- a/gsi526.html
+++ b/gsi526.html
@@ -68,7 +68,7 @@
 			</nav>
 			<div class="page-title">
 				<img src="images/person_1.jpg" alt="Free HTML5 by FreeHTMl5.co">
-				<span>Disciplinas 2º Semestre de 2018 - Sistemas de Informação (UFU)</span>
+				<span>Disciplinas 1º Semestre de 2019 - Sistemas de Informação (UFU)</span>
 				<h2>GSI526 - Engenharia de Software</h2>
 			</div>
 		</div>
@@ -78,10 +78,10 @@
 					<div>
 					<b>Avaliação:</b>
 					<ul>
-					<li>Prova 1 - 30 pts <b>(08/10)</b></li>
-					<li>Prova 2 - 35 pts <b>(12/11)</b></li>
-					<li>Seminário - 15 pts <b>(11/12)</b>
-					<li>Prova 3 - 20 pts <b>(17/12)</b> - <b><i>Aulas 10, 11, 12 e 13</i></b></li>
+					<li>Prova 1 - 25 pts <b>(10/04)</b></li>
+					<li>Prova 2 - 30 pts <b>(22/05)</b></li>
+					<li>Prova 3 - 30 pts <b>(04/07)</b></li>
+					<li>Seminário - 15 pts <b>(10/07)</b></li>
 					</ul>
 					</div>
 					<b>Material:</b>
@@ -89,7 +89,7 @@
 						<ul>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 1 - História da Engenharia de Software.pdf"> Aula 1 - Introdução à Engenharia de Software</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 2 - Requisitos de SW.pptx"> Aula 2 - Requisitos de Software</a></button></li>
-						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 3 - Arquitetura de SW.pptx"> Aula 3 - Arquitetura de Software</a></button></li>
+						<!--<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 3 - Arquitetura de SW.pptx"> Aula 3 - Arquitetura de Software</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 4 - Manifesto_agil.pdf"> Aula 4 - Manifesto Ágil </a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 4 - Metodos_ageis.pdf"> Aula 4 - Métodos Ágeis </a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 5 - Scrum_papeis.pdf"> Aula 5 - Scrum: Papéis e Reuniões </a></button></li>
