--- a/material.html
+++ b/material.html
@@ -69,7 +69,7 @@
 			<div class="page-title">
 				<img src="images/person_1.jpg" alt="Free HTML5 by FreeHTMl5.co">
 				<!--<span>November 10, 2017</span>-->
-				<h2>Disciplinas 2º Semestre de 2018 <br> Sistemas de Informação (UFU)</h2>
+				<h2>Disciplinas 1º Semestre de 2019 <br> Sistemas de Informação (UFU)</h2>
 			</div>
 		</div>
 		<div id="fh5co-main-content">
@@ -77,9 +77,9 @@
 				<div class="fh5co-entry padding">
 					<div>
 						<ul>
-						<li><a href="gsi522.html"><i class="icon-home"></i><i> GSI522 - Modelagem de Software <b>(Terça: 14h50-16h50 / Quarta: 13h10-14h50)</b></i></a></li>
-						<li><a href="gsi526.html"><i class="icon-home"></i><i> GSI526 - Engenharia de Software <b>(Segunda: 08h50-10h40 / Terça: 10h40-12h20)</b></i></a></li>
-						<li><a href="gac023.html"><i class="icon-home"></i><i> GAC023 - Programação de Computadores <b>(Terça: 08h50-10h40 / Quarta: 14h50-16h50)</b></i></a></li>
+						<li><a href="gsi522.html"><i class="icon-home"></i><i> GSI522 - Modelagem de Software <b>(Terça: 14h50 - 16h50 / Quarta: 13h10 - 14h50)</b></i></a></li>
+						<li><a href="gsi526.html"><i class="icon-home"></i><i> GSI526 - Engenharia de Software <b>(Quarta: 08h50 - 10h40 / Quinta: 10h40 - 12h20)</b></i></a></li>
+						<li><a href="gsi538.html"><i class="icon-home"></i><i> GSI538 - Projeto e Desenvolvimento de Sistemas de Informação 2 <b>(Terça: 08h50 - 12h20)</b></i></a></li>
 						</ul>
 					</div>
 				</div>
