update nos slides das disciplinas

--- a/gsi522.html
+++ b/gsi522.html
@@ -76,6 +76,12 @@
 			<div class="fh5co-post"> 
 				<div class="fh5co-entry padding">
 					<div>
+					<b>Ementa:</b>
+					<ul>
+					<li><i class="icon-book"></i><a href="aulas/gsi522/plano-modelagem.pdf"> Plano de Ensino</a></li>
+					</ul>
+					</div>
+					<div>
 					<b>Avaliação:</b>
 					<ul>
 					<li>Prova 1 - 25 pts <b>(09/04)</b></li>
@@ -88,7 +94,7 @@
 					<div>
 						<ul>						
 						<li><i class="icon-book"></i><a href="aulas/gsi522/Aula1 - IntroduçãoModelagemSW.pptx"> Aula 1 - Introdução à Modelagem de Software</a></li>
-						<li><i class="icon-book"></i><a href="aulas/gsi522/Aula2 - Requisitos.pptx"> Aula 2 - Requisitos de Software</a></li>
+						<li><i class="icon-book"></i><a href="aulas/gsi522/Aula 2 - Requisitos de Software.pdf"> Aula 2 - Requisitos de Software</a></li>
 						<!--<li><i class="icon-book"></i><a href="aulas/gsi522/Aula3 - Casos de Uso.pptx"> Aula 3 - Diagrama de Casos de Uso</a></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi522/Aula4 - Diagrama de Classes.pptx"> Aula 4 - Diagrama de Classes</a></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi522/Aula5 - SequênciaComunicação.pptx"> Aula 5 - Diagramas de Sequência e Comunicação</a></li>
