--- a/gsi538.html
+++ b/gsi538.html
@@ -76,6 +76,12 @@
 			<div class="fh5co-post"> 
 				<div class="fh5co-entry padding">
 					<div>
+					<b>Ementa:</b>
+					<ul>
+					<li><i class="icon-book"></i><a href="aulas/gsi538/plano-pds2.pdf"> Plano de Ensino</a></li>
+					</ul>
+					</div>
+					<div>
 					<b>Avaliação:</b>
 					<ul>
 					<li>Prova 1 - 30 pts <b>(30/04)</b></li>
@@ -86,9 +92,12 @@
 					<b>Material:</b>
 					<div>
 						<ul>
-						<li><i class="icon-book"></i><a href="aulas/gsi538/Aula 1 - Requisitos de SW.pptx"> Aula 1 - Requisitos de Software</a></button></li>
-						<li><i class="icon-book"></i><a href="aulas/gsi538/Aula 2 - Arquitetura de SW.pptx"> Aula 2 - Arquitetura de Software</a></button></li>
-						<!--<li><i class="icon-book"></i><a href="aulas/gsi530/aula3.pdf"> Aula 3</a></button></li>
+						<li><i class="icon-book"></i><a href="aulas/gsi538/Aula 1 - Requisitos de Software.pdf"> Aula 1 - Requisitos de Software</a></button></li>
+						<li><i class="icon-book"></i><a href="aulas/gsi538/Aula 2 - Engenharia de Requisitos 1.pdf"> Aula 2 - Processos da Engenharia de Requisitos</a></button></li>
+						<li><i class="icon-book"></i><a href="aulas/gsi538/Aula 3 - Engenharia de Requisitos 2.pdf"> Aula 3 - Técnicas da Engenharia de Requisitos</a></button></li>
+						<li><i class="icon-book"></i><a href="aulas/gsi538/Aula 4 - IntroduçãoModelagemSW.pptx"> Aula 4 - Introdução à Modelagem de Software</a></button></li>
+						<!--<li><i class="icon-book"></i><a href="aulas/gsi538/Aula 5 - Casos de Uso.pptx"> Aula 5 - Diagrama de Casos de Uso</a></button></li>
+						<li><i class="icon-book"></i><a href="aulas/gsi530/aula3.pdf"> Aula 3</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi530/aula4.pdf"> Aula 4</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi530/aula5.pdf"> Aula 5</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi530/aula6.pdf"> Aula 6</a></button></li>
