--- a/gsi526.html
+++ b/gsi526.html
@@ -76,6 +76,12 @@
 			<div class="fh5co-post"> 
 				<div class="fh5co-entry padding">
 					<div>
+					<b>Ementa:</b>
+					<ul>
+					<li><i class="icon-book"></i><a href="aulas/gsi526/plano-esof.pdf"> Plano de Ensino</a></li>
+					</ul>
+					</div>
+					<div>
 					<b>Avaliação:</b>
 					<ul>
 					<li>Prova 1 - 25 pts <b>(10/04)</b></li>
@@ -88,7 +94,7 @@
 					<div>
 						<ul>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 1 - História da Engenharia de Software.pdf"> Aula 1 - Introdução à Engenharia de Software</a></button></li>
-						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 2 - Requisitos de SW.pptx"> Aula 2 - Requisitos de Software</a></button></li>
+						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 2 - Requisitos de Software.pdf"> Aula 2 - Requisitos de Software</a></button></li>
 						<!--<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 3 - Arquitetura de SW.pptx"> Aula 3 - Arquitetura de Software</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 4 - Manifesto_agil.pdf"> Aula 4 - Manifesto Ágil </a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 4 - Metodos_ageis.pdf"> Aula 4 - Métodos Ágeis </a></button></li>
