--- a/gsi522.html
+++ b/gsi522.html
@@ -95,6 +95,7 @@
 						<ul>						
 						<li><i class="icon-book"></i><a href="aulas/gsi522/Aula1 - IntroduçãoModelagemSW.pptx"> Aula 1 - Introdução à Modelagem de Software</a></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi522/Aula 2 - Requisitos de Software.pdf"> Aula 2 - Requisitos de Software</a></li>
+						<li><i class="icon-book"></i><a href="aulas/gsi522/Aula3 - Casos de Uso.pptx"> Aula 3 - Diagrama de Casos de Uso</a></li>
 						<!--<li><i class="icon-book"></i><a href="aulas/gsi522/Aula3 - Casos de Uso.pptx"> Aula 3 - Diagrama de Casos de Uso</a></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi522/Aula4 - Diagrama de Classes.pptx"> Aula 4 - Diagrama de Classes</a></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi522/Aula5 - SequênciaComunicação.pptx"> Aula 5 - Diagramas de Sequência e Comunicação</a></li>
