--- a/gsi538.html
+++ b/gsi538.html
@@ -96,6 +96,8 @@
 						<li><i class="icon-book"></i><a href="aulas/gsi538/Aula 2 - Engenharia de Requisitos 1.pdf"> Aula 2 - Processos da Engenharia de Requisitos</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi538/Aula 3 - Engenharia de Requisitos 2.pdf"> Aula 3 - Técnicas da Engenharia de Requisitos</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi538/Aula 4 - IntroduçãoModelagemSW.pptx"> Aula 4 - Introdução à Modelagem de Software</a></button></li>
+						<li><i class="icon-book"></i><a href="aulas/gsi538/Aula 5 - Casos de Uso.pptx"> Aula 5 - Diagrama de Casos de Uso</a></button></li>
+						<li><i class="icon-book"></i><a href="aulas/gsi538/Aula 6 - Diagrama de Classes.pptx"> Aula 6 - Diagrama de Classes</a></button></li>
 						<!--<li><i class="icon-book"></i><a href="aulas/gsi538/Aula 5 - Casos de Uso.pptx"> Aula 5 - Diagrama de Casos de Uso</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi530/aula3.pdf"> Aula 3</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi530/aula4.pdf"> Aula 4</a></button></li>
