adicao da publicacao IST Journal

--- a/index.html
+++ b/index.html
@@ -98,6 +98,17 @@
 				<div class="fh5co-entry padding">
 					<img src="images/project-6.jpg" alt="Free HTML5 Bootstrap Template by FreeHTML5.co">
 					<div>
+						<span class="fh5co-post-date">March 22, 2019</span>
+						<h2><a href="ist19.html">Bootstrapping Cookbooks for APIs from Crowd Knowledge on Stack Overflow</a></h2>
+						<p>L. Souza, <b>E. Campos</b>, F. Madeiral, K. Paixão, A. Rocha, M. Maia</p>
+						<p><i>Information and Software Technology Journal, 16 pages, Elsevier, 2019.</i></p>
+						<button class="button"><a href="papers/ist19.pdf">Paper</a></button>
+						<button class="button"><a href="papers/ist19.bib">BibTex</a></button>						
+					</div>
+				</div>
+				<div class="fh5co-entry padding">
+					<img src="images/project-6.jpg" alt="Free HTML5 Bootstrap Template by FreeHTML5.co">
+					<div>
 						<span class="fh5co-post-date">November 10, 2017</span>
 						<h2><a href="esem17.html">Common Bug-fix Patterns: A Large-Scale Observational Study</a></h2>
 						<p><b>E. Campos</b>, M. Maia</p>
@@ -106,7 +117,6 @@
 						<button class="button"><a href="papers/esem17.bib">BibTex</a></button>
 					</div>
 				</div>
-				
 				<div class="fh5co-entry padding">
 					<img src="images/project-7.jpg" alt="Free HTML5 Bootstrap Template by FreeHTML5.co">
 					<div>
