atualizacao do site da disciplina de PDS2

--- a/gsi538.html
+++ b/gsi538.html
@@ -84,9 +84,9 @@
 					<div>
 					<b>Avaliação:</b>
 					<ul>
-					<li>Prova 1 - 30 pts <b>(30/04)</b></li>
-					<li>Prova 2 - 35 pts <b>(18/06)</b></li>
-					<li>Trabalho - 35 pts <b>(09/07)</b></li>
+					<li>Prova 1 - 35 pts <b>(30/04)</b></li>
+					<li>Trabalho (Modelagem) - 30 pts <b>(18/06)</b></li>
+					<li>Trabalho (Implementação) - 35 pts <b>(09/07)</b></li>
 					</ul>
 					</div>
 					<b>Material:</b>
