--- a/index.html
+++ b/index.html
@@ -94,14 +94,25 @@
 			</div>
 		</div>
 		<div id="fh5co-main-content">
-			<div class="fh5co-post"> 	
+			<div class="fh5co-post"> 
+				<div class="fh5co-entry padding">
+					<img src="images/project-5.jpg" alt="Free HTML5 Bootstrap Template by FreeHTML5.co">
+					<div>
+						<span class="fh5co-post-date">March 27, 2019</span>
+						<h2><a href="jsep19.html">Discovering Common Bug-fix Patterns: A Large-Scale Observational Study</a></h2>
+						<p><b>E. Campos</b>, M. Maia</p>
+						<p><i>Journal of Software: Evolution and Process (JSEP), 38 pages, Wiley, 2019. (To appear).</i></p>
+						<button class="button"><a href="papers/jsep19.pdf">Paper</a></button>
+						<!--<button class="button"><a href="papers/ist19.bib">BibTex</a></button>-->						
+					</div>
+				</div>
 				<div class="fh5co-entry padding">
 					<img src="images/project-6.jpg" alt="Free HTML5 Bootstrap Template by FreeHTML5.co">
 					<div>
 						<span class="fh5co-post-date">March 22, 2019</span>
 						<h2><a href="ist19.html">Bootstrapping Cookbooks for APIs from Crowd Knowledge on Stack Overflow</a></h2>
 						<p>L. Souza, <b>E. Campos</b>, F. Madeiral, K. Paixão, A. Rocha, M. Maia</p>
-						<p><i>Information and Software Technology Journal, 16 pages, Elsevier, 2019.</i></p>
+						<p><i>Information and Software Technology Journal (IST), 16 pages, Elsevier, 2019.</i></p>
 						<button class="button"><a href="papers/ist19.pdf">Paper</a></button>
 						<button class="button"><a href="papers/ist19.bib">BibTex</a></button>						
 					</div>
