atualizacao dos sites das 3 disciplinas

--- a/gsi538.html
+++ b/gsi538.html
@@ -98,6 +98,7 @@
 						<li><i class="icon-book"></i><a href="aulas/gsi538/Aula 4 - IntroduçãoModelagemSW.pptx"> Aula 4 - Introdução à Modelagem de Software</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi538/Aula 5 - Casos de Uso.pptx"> Aula 5 - Diagrama de Casos de Uso</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi538/Aula 6 - Diagrama de Classes.pptx"> Aula 6 - Diagrama de Classes</a></button></li>
+						<li><i class="icon-book"></i><a href="aulas/gsi538/Aula 7 - SequenciaComunicacao.pptx"> Aula 7 - Diagramas de Sequência e Comunicação</a></button></li>
 						<!--<li><i class="icon-book"></i><a href="aulas/gsi538/Aula 5 - Casos de Uso.pptx"> Aula 5 - Diagrama de Casos de Uso</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi530/aula3.pdf"> Aula 3</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi530/aula4.pdf"> Aula 4</a></button></li>
@@ -108,6 +109,12 @@
 						<li><i class="icon-book"></i><a href="aulas/gsi530/aula9.pdf"> Aula 9</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi530/aula10.pdf"> Aula 10</a></button></li>-->
 						</ul>
+					</div>
+					<div>
+					<b>Código-fonte de projetos:</b>
+					<ul>
+					<li><i class="icon-stackoverflow"></i><a href="aulas/gsi538/StockWatcher.rar"> StockWatcher (GWT)</a></li>
+					</ul>
 					</div>
 				</div>
 			</div>
