--- a/gsi526.html
+++ b/gsi526.html
@@ -97,6 +97,9 @@
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 2 - Requisitos de Software.pdf"> Aula 2 - Requisitos de Software</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 3 - Processos de Software.pdf"> Aula 3 - Processos de Software</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 4 - Processo Unificado.pdf"> Aula 4 - Processo Unificado</a></button></li>
+						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 5 - Manifesto_agil.pdf"> Aula 5 - Manifesto Ágil</a></button></li>
+						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 5 - Metodos_ageis.pdf"> Aula 5 - Métodos Ágeis</a></button></li>
+						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 5 - Scrum.pdf"> Aula 5 - Scrum: Papéis e Reuniões</a></button></li>
 						<!--<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 3 - Arquitetura de SW.pptx"> Aula 3 - Arquitetura de Software</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 4 - Manifesto_agil.pdf"> Aula 4 - Manifesto Ágil </a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 4 - Metodos_ageis.pdf"> Aula 4 - Métodos Ágeis </a></button></li>
