codigo de projeto GWT e tutorial sobre GWT

--- a/gsi538.html
+++ b/gsi538.html
@@ -111,9 +111,10 @@
 						</ul>
 					</div>
 					<div>
-					<b>Código-fonte de projetos:</b>
+					<b>Código-fonte de projetos e links diversos:</b>
 					<ul>
 					<li><i class="icon-stackoverflow"></i><a href="aulas/gsi538/StockWatcher.rar"> StockWatcher (GWT)</a></li>
+					<li><i class="icon-stackoverflow"></i><a href="http://www.gwtproject.org/doc/latest/DevGuideCodingBasicsClient.html" target="_blank"><b>Onde aprender tudo sobre o framework Web GWT?</b></a></li>
 					</ul>
 					</div>
 				</div>
