atualizacao da pagina de pds2 com os links do GWT, aplicacoes GWT e dump do banco MySQL

--- a/gsi538.html
+++ b/gsi538.html
@@ -113,8 +113,13 @@
 					<div>
 					<b>Código-fonte de projetos e links diversos:</b>
 					<ul>
-					<li><i class="icon-stackoverflow"></i><a href="aulas/gsi538/StockWatcher.rar"> StockWatcher (GWT)</a></li>
-					<li><i class="icon-stackoverflow"></i><a href="http://www.gwtproject.org/doc/latest/DevGuideCodingBasicsClient.html" target="_blank"><b>Onde aprender tudo sobre o framework Web GWT?</b></a></li>
+					<li><i class="icon-stackoverflow"></i><a href="aulas/gsi538/GWT-Tutorial.pdf"> Tutorial: Como instalar o plugin do GWT no Eclipse IDE</a></button></li>
+					<li><i class="icon-stackoverflow"></i><a href="http://www.gwtproject.org/doc/latest/DevGuideCodingBasicsClient.html" target="_blank">Onde aprender tudo sobre o framework Web GWT?</a></li>
+					<li><i class="icon-stackoverflow"></i><a href= "http://samples.gwtproject.org/samples/Showcase/Showcase.html#!CwCheckBox" target="_blank">GWT Showcase of Features</a></li>
+					<li><i class="icon-stackoverflow"></i><a href="aulas/gsi538/StockWatcher.rar"> StockWatcher GWT Application</a></li>
+					<li><i class="icon-stackoverflow"></i><a href="aulas/gsi538/LoginApp.rar"> Login GWT Application</a></li>
+					<li><i class="icon-stackoverflow"></i><a href="aulas/gsi538/Cars.rar"> Cars GWT Application</a></li>
+					<li><i class="icon-stackoverflow"></i><a href="aulas/gsi538/database_tables.sql"> Tabelas do banco de dados MySQL (Dump)</a></li>
 					</ul>
 					</div>
 				</div>
