--- a/gsi526.html
+++ b/gsi526.html
@@ -101,7 +101,7 @@
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 5 - Metodos_ageis.pdf"> Aula 5 - Métodos Ágeis</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 5 - Scrum.pdf"> Aula 5 - Scrum: Papéis e Reuniões</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 6 - Extreme Programming.pdf"> Aula 6 - Programação Extrema (XP)</a></button></li>
-						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 7 - Bad-smells.pptx"> Aula 7 - <i>Bad Smells</i> e Refatoração</a></button></li>	
+						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 7 - Smells.pptx"> Aula 7 - <i>Bad Smells</i> e Refatoração</a></button></li>	
 						<!--<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 3 - Arquitetura de SW.pptx"> Aula 3 - Arquitetura de Software</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 4 - Manifesto_agil.pdf"> Aula 4 - Manifesto Ágil </a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 4 - Metodos_ageis.pdf"> Aula 4 - Métodos Ágeis </a></button></li>
