--- a/gsi526.html
+++ b/gsi526.html
@@ -102,13 +102,9 @@
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 5 - Scrum.pdf"> Aula 5 - Scrum: Papéis e Reuniões</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 6 - Extreme Programming.pdf"> Aula 6 - Programação Extrema (XP)</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 7 - Smells.ppt"> Aula 7 - <i>Bad Smells</i> e Refatoração</a></button></li>	
+						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 8-Reuso-Parte1.ppt"> Aula 8 - Reuso de Software (Parte 1)</a></button></li>	
+						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 8-Técnicas de Reuso.ppt"> Aula 8 - Técnicas de Reuso de Software</a></button></li>	
 						<!--<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 3 - Arquitetura de SW.pptx"> Aula 3 - Arquitetura de Software</a></button></li>
-						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 4 - Manifesto_agil.pdf"> Aula 4 - Manifesto Ágil </a></button></li>
-						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 4 - Metodos_ageis.pdf"> Aula 4 - Métodos Ágeis </a></button></li>
-						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 5 - Scrum_papeis.pdf"> Aula 5 - Scrum: Papéis e Reuniões </a></button></li>
-						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 5 - Scrum_fases.pdf"> Aula 5 - Fases do Scrum </a></button></li>
-						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 6 - Refatoracao.pdf"> Aula 6 - Refatoração</a></button></li>
-						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 7 - Bad-smells.ppt"> Aula 7 - <i>Bad Smells</i></a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 8-Reuso-Parte1.ppt"> Aula 8 - Reuso de Software (Parte 1)</a></button></li>						
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 8-Reuso-Parte2.pdf"> Aula 8 - Reuso de Software (Parte 2)</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 8-Técnicas de Reuso.ppt"> Aula 8 - Técnicas de Reuso de Software </a></button></li>						
