--- a/gsi522.html
+++ b/gsi522.html
@@ -127,11 +127,17 @@
 						<li><i class="icon-book"></i><a href="aulas/gsi522/aula10.pdf"> Aula 10</a></li>-->
 						</ul>
 					</div>
+					<div>
+					<b>Trabalho Final:</b>
+					<ul>
+					<li><i class="icon-book"></i><a href="aulas/gsi522/P1-HealthWatcher.pdf"> Documento de Requisitos: <i>Health-Watcher</i></a></li>
+					<li><i class="icon-book"></i><a href="aulas/gsi522/trab_modelagem.pdf"> Especificação do Trabalho</a></li>
+					</ul>
+					</div>
 				</div>
 			</div>
 		</div>
 	</div>
-
 	<!--<div class="fh5co-navigation">
 		<div class="fh5co-cover prev fh5co-cover-sm" style="background-image: url(images/project-4.jpg)">
 			<div class="overlay"></div>
