atualizacao da minha descricao no site

--- a/index.html
+++ b/index.html
@@ -82,9 +82,10 @@
 			<div class="featured">
 				<img src="images/about.jpg" alt="" height="380" width="300">
 				<!--<span>Bio</span>-->
-				<h2>Hi! I'm Eduardo Campos, a Computer Science Ph.D. student at the 
-				Federal University of Uberlândia, Brazil advised by <a href="http://lascam.facom.ufu.br/cms/">Dr. Marcelo Maia</a>. 
-				<br><br><a href="index.html"><i class="icon-home"></i></a></li>
+				<br>
+				<span>Hi! I'm <a href="http://buscatextual.cnpq.br/buscatextual/visualizacv.do?id=K4350860Z5">Dr. Eduardo Campos</a>, an Assistant Professor at the Federal University of Uberlândia (UFU), Brazil. I earned my PhD in Software Engineering in 2019 from UFU under the supervision of <a href="http://lascam.facom.ufu.br/cms/"> Dr. Marcelo Maia.</a></span> 
+				<h2>
+				<a href="index.html"><i class="icon-home"></i></a></li>
 				<a href="https://www.facebook.com/eduardo.campos.9256028"><i class="icon-facebook"></i></a>
 				<a href="mailto:eduardocunha11@gmail.com"><i class="icon-mail"></i></a>
 				<a href="https://twitter.com/eduardocunha080"><i class="icon-twitter"></i></a>
