--- a/gsi522.html
+++ b/gsi522.html
@@ -98,6 +98,7 @@
 						<li><i class="icon-book"></i><a href="aulas/gsi522/Aula3 - Casos de Uso.pptx"> Aula 3 - Diagrama de Casos de Uso</a></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi522/Aula4 - Diagrama de Classes.pptx"> Aula 4 - Diagrama de Classes</a></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi522/Aula5 - SequênciaComunicação.pptx"> Aula 5 - Diagramas de Sequência e Comunicação</a></li>
+						<li><i class="icon-book"></i><a href="aulas/gsi522/notas_modelagem_2019_1.pdf"> <img src="images/new2.gif" alt="" height="11" width="28"> Notas Parciais </a></button></li>
 						<!--<li><i class="icon-book"></i><a href="aulas/gsi522/Aula3 - Casos de Uso.pptx"> Aula 3 - Diagrama de Casos de Uso</a></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi522/Aula4 - Diagrama de Classes.pptx"> Aula 4 - Diagrama de Classes</a></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi522/Aula5 - SequênciaComunicação.pptx"> Aula 5 - Diagramas de Sequência e Comunicação</a></li>
@@ -118,7 +119,6 @@
 						<li><i class="icon-book"></i><a href="aulas/gsi522/P2-SigaEnsino.pdf"> Projeto 2: SIGA Ensino</a></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi522/P3-Voos.pdf"> Projeto 3: Sistema de Voos</a></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi522/P4-Systrack.pdf"> Projeto 4: Systrack</a></li>
-						<li><i class="icon-book"></i><a href="aulas/gsi522/notas_modelagem.pdf"> <img src="images/new2.gif" alt="" height="11" width="28"> Notas Finais </a></button></li>
 						<!--<li><i class="icon-book"></i><a href="aulas/gsi522/aula5.pdf"> Aula 5</a></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi522/aula6.pdf"> Aula 6</a></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi522/aula7.pdf"> Aula 7</a></li>
