atualizacao do site de Modelagem e de ESOF. Mudanca na nota do aluno Rafael Sevilha (ESOF)

--- a/gsi522.html
+++ b/gsi522.html
@@ -98,6 +98,8 @@
 						<li><i class="icon-book"></i><a href="aulas/gsi522/Aula3 - Casos de Uso.pptx"> Aula 3 - Diagrama de Casos de Uso</a></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi522/Aula4 - Diagrama de Classes.pptx"> Aula 4 - Diagrama de Classes</a></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi522/Aula5 - SequênciaComunicação.pptx"> Aula 5 - Diagramas de Sequência e Comunicação</a></li>
+						<li><i class="icon-book"></i><a href="aulas/gsi522/Aula6 - Estados.pptx"> Aula 6 - Diagrama de Estados</a></li>
+						<li><i class="icon-book"></i><a href="aulas/gsi522/Aula7 - Atividades.pptx"> Aula 7 - Diagrama de Atividades</a></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi522/notas_modelagem_2019_1.pdf"> <img src="images/new2.gif" alt="" height="11" width="28"> Notas Parciais </a></button></li>
 						<!--<li><i class="icon-book"></i><a href="aulas/gsi522/Aula3 - Casos de Uso.pptx"> Aula 3 - Diagrama de Casos de Uso</a></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi522/Aula4 - Diagrama de Classes.pptx"> Aula 4 - Diagrama de Classes</a></li>
