--- a/gsi526.html
+++ b/gsi526.html
@@ -104,7 +104,9 @@
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 7 - Smells.ppt"> Aula 7 - <i>Bad Smells</i> e Refatoração</a></button></li>	
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 8-Reuso-Parte1.ppt"> Aula 8 - Reuso de Software (Parte 1)</a></button></li>	
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 8-Técnicas de Reuso.ppt"> Aula 8 - Técnicas de Reuso de Software</a></button></li>	
-						<li><i class="icon-book"></i><a href="aulas/gsi522/notas_esof_2019_1.pdf"> <img src="images/new2.gif" alt="" height="11" width="28"> Notas Parciais </a></button></li>
+						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula9 - Manutencao de Software.pdf"> Aula 9 - Manutenção de Software</a></button></li>
+						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula9 - Testes de Unidade.pdf"> Aula 9 - Testes de Unidade</a></button></li>
+						<li><i class="icon-book"></i><a href="aulas/gsi526/notas_esof_2019_1.pdf"> <img src="images/new2.gif" alt="" height="11" width="28"> Notas Parciais </a></button></li>
 						<!--<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 3 - Arquitetura de SW.pptx"> Aula 3 - Arquitetura de Software</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 8-Reuso-Parte1.ppt"> Aula 8 - Reuso de Software (Parte 1)</a></button></li>						
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 8-Reuso-Parte2.pdf"> Aula 8 - Reuso de Software (Parte 2)</a></button></li>
