adicao da tese e das notas parciais da disciplina de pds2

--- a/gsi538.html
+++ b/gsi538.html
@@ -85,8 +85,8 @@
 					<b>Avaliação:</b>
 					<ul>
 					<li>Prova 1 - 35 pts <b>(30/04)</b></li>
-					<li>Trabalho (Modelagem) - 30 pts <b>(18/06)</b></li>
-					<li>Trabalho (Implementação) - 35 pts <b>(09/07)</b></li>
+					<li>Trabalho (Modelagem) - 25 pts <b>(18/06)</b></li>
+					<li>Trabalho (Implementação) - 40 pts <b>(09/07)</b></li>
 					</ul>
 					</div>
 					<b>Material:</b>
@@ -99,6 +99,8 @@
 						<li><i class="icon-book"></i><a href="aulas/gsi538/Aula 5 - Casos de Uso.pptx"> Aula 5 - Diagrama de Casos de Uso</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi538/Aula 6 - Diagrama de Classes.pptx"> Aula 6 - Diagrama de Classes</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi538/Aula 7 - SequenciaComunicacao.pptx"> Aula 7 - Diagramas de Sequência e Comunicação</a></button></li>
+						<li><i class="icon-book"></i><a href="aulas/gsi538/Aula 8 - PHP e MySQL.pdf"> Aula 8 - Web Dinâmica com PHP e MySQL</a></button></li>
+						<li><i class="icon-book"></i><a href="aulas/gsi538/notas_pds2_2019_1.pdf"> <img src="images/new2.gif" alt="" height="11" width="28"> Notas Parciais </a></button></li>
 						<!--<li><i class="icon-book"></i><a href="aulas/gsi538/Aula 5 - Casos de Uso.pptx"> Aula 5 - Diagrama de Casos de Uso</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi530/aula3.pdf"> Aula 3</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi530/aula4.pdf"> Aula 4</a></button></li>
@@ -113,6 +115,7 @@
 					<div>
 					<b>Código-fonte de projetos e links diversos:</b>
 					<ul>
+					<li><i class="icon-stackoverflow"></i><a href="https://www.w3schools.com/"> Tutorial sobre PHP, JavaScript, HTML, CSS</a></button></li>
 					<li><i class="icon-stackoverflow"></i><a href="aulas/gsi538/GWT-Tutorial.pdf"> Tutorial: Como instalar o plugin do GWT no Eclipse IDE</a></button></li>
 					<li><i class="icon-stackoverflow"></i><a href="http://www.gwtproject.org/doc/latest/DevGuideCodingBasicsClient.html" target="_blank">Onde aprender tudo sobre o framework Web GWT?</a></li>
 					<li><i class="icon-stackoverflow"></i><a href= "http://samples.gwtproject.org/samples/Showcase/Showcase.html#!CwCheckBox" target="_blank">GWT Showcase of Features</a></li>
