remocao de co-autor de tese

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 					<div>
 						<span class="fh5co-post-date">April 12, 2019</span>
 						<h2><a href="thesis19.html">Recommending Knowledge Available in Q&A Sites for Aiding Software Development and Debugging (in portuguese)</a></h2>
-						<p><b>E. Campos</b>, M. Maia</p>
+						<p><b>E. Campos</b></p>
 						<p><i>Ph.D. Thesis - Federal University of Uberlândia</i></p>
 						<button class="button"><a href="papers/eduardo_thesis.pdf">Thesis</a></button>
 						<!--<button class="button"><a href="papers/ist19.bib">BibTex</a></button>-->						
