--- a/gsi522.html
+++ b/gsi522.html
@@ -85,7 +85,7 @@
 					<b>Avaliação:</b>
 					<ul>
 					<li>Prova 1 - 25 pts <b>(09/04)</b></li>
-					<li>Prova 2 - 25 pts <b>(15/05)</b></li>
+					<li>Prova 2 - 25 pts <b>(15/05)</b> - <i> Aulas 5, 6, 7 e 8</i></li>
 					<li>Prova 3 - 25 pts <b>(03/07)</b></li>
 					<li>Trabalho - 25 pts <b>(09/07)</b></li>
 					</ul>
@@ -100,6 +100,7 @@
 						<li><i class="icon-book"></i><a href="aulas/gsi522/Aula5 - SequênciaComunicação.pptx"> Aula 5 - Diagramas de Sequência e Comunicação</a></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi522/Aula6 - Estados.pptx"> Aula 6 - Diagrama de Estados</a></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi522/Aula7 - Atividades.pptx"> Aula 7 - Diagrama de Atividades</a></li>
+						<li><i class="icon-book"></i><a href="aulas/gsi522/Aula8 - ResumoDiagramas.pdf"> Aula 8 - Resumo dos Diagramas UML</a></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi522/notas_modelagem_2019_1.pdf"> <img src="images/new2.gif" alt="" height="11" width="28"> Notas Parciais </a></button></li>
 						<!--<li><i class="icon-book"></i><a href="aulas/gsi522/Aula3 - Casos de Uso.pptx"> Aula 3 - Diagrama de Casos de Uso</a></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi522/Aula4 - Diagrama de Classes.pptx"> Aula 4 - Diagrama de Classes</a></li>
