--- a/gsi526.html
+++ b/gsi526.html
@@ -85,7 +85,7 @@
 					<b>Avaliação:</b>
 					<ul>
 					<li>Prova 1 - 25 pts <b>(10/04)</b></li>
-					<li>Prova 2 - 30 pts <b>(23/05)</b></li>
+					<li>Prova 2 - 30 pts <b>(23/05)</b> - <i> Aulas 8, 9, 10 e 11</i></li>
 					<li>Prova 3 - 30 pts <b>(04/07)</b></li>
 					<li>Seminário - 15 pts <b>(10/07)</b></li>
 					</ul>
@@ -102,11 +102,16 @@
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 5 - Scrum.pdf"> Aula 5 - Scrum: Papéis e Reuniões</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 6 - Extreme Programming.pdf"> Aula 6 - Programação Extrema (XP)</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 7 - Smells.ppt"> Aula 7 - <i>Bad Smells</i> e Refatoração</a></button></li>	
-						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 8-Reuso-Parte1.ppt"> Aula 8 - Reuso de Software (Parte 1)</a></button></li>	
+						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 8-Reuso-Parte1.ppt"> Aula 8 - Reuso de Software</a></button></li>	
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 8-Técnicas de Reuso.ppt"> Aula 8 - Técnicas de Reuso de Software</a></button></li>	
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula9 - Manutencao de Software.pdf"> Aula 9 - Manutenção de Software</a></button></li>
+						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula9 - Validacao-Verificacao-Teste.pdf"> Aula 9 - Validação, Verificação e Teste</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula9 - Testes de Unidade.pdf"> Aula 9 - Testes de Unidade</a></button></li>
-						<li><i class="icon-book"></i><a href="aulas/gsi526/notas_esof_2019_1.pdf"> <img src="images/new2.gif" alt="" height="11" width="28"> Notas Parciais </a></button></li>
+						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula9 - Testes de Desenvolvimento.pdf"> Aula 9 - Testes de Desenvolvimento</a></button></li>
+						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula9 - Testes de Release.pdf"> Aula 9 - Testes de Release </a></button></li>
+						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 10 - Arquitetura de Software.pdf"> Aula 10 - Arquitetura de Software</a></button></li>
+						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 11 - Papel_Arquiteto_Software.pptx"> Aula 11 - O Papel do Arquiteto de Software</a></button></li>
+						<li><i class="icon-book"></i><a href="aulas/gsi526/notas_esof_2019_1.pdf"> <img src="images/new2.gif" alt="" height="11" width="28"> Notas Parciais</a></button></li>
 						<!--<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 3 - Arquitetura de SW.pptx"> Aula 3 - Arquitetura de Software</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 8-Reuso-Parte1.ppt"> Aula 8 - Reuso de Software (Parte 1)</a></button></li>						
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 8-Reuso-Parte2.pdf"> Aula 8 - Reuso de Software (Parte 2)</a></button></li>
