--- a/gsi526.html
+++ b/gsi526.html
@@ -87,7 +87,7 @@
 					<li>Prova 1 - 25 pts <b>(10/04)</b></li>
 					<li>Prova 2 - 30 pts <b>(23/05)</b> - <i> Aulas 8, 9, 10 e 11</i></li>
 					<li>Prova 3 - 35 pts <b>(04/07)</b></li>
-					<li>Seminário - 10 pts <b>(19/06, 20/06 e 26/06)</b></li>
+					<li>Seminário - 10 pts <b>(12/06, 13/06 e 19/06)</b></li>
 					</ul>
 					</div>
 					<b>Material:</b>
@@ -111,6 +111,8 @@
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula9 - Testes de Release.pdf"> Aula 9 - Testes de Release </a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 10 - Arquitetura de Software.pdf"> Aula 10 - Arquitetura de Software</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 11 - Papel_Arquiteto_Software.pptx"> Aula 11 - O Papel do Arquiteto de Software</a></button></li>
+						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 12 - WebMVCePatterns.pdf"> Aula 12 - O Padrão Web MVC (Model-View-Controller)</a></button></li>
+						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 13 - SistemasDeControleDeVersao.pdf"> Aula 13 - Sistemas de Controle de Versão</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/seminario_esof.pdf"> <img src="images/new2.gif" alt="" height="11" width="28"> Seminário</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/notas_esof_2019_1.pdf"> <img src="images/new2.gif" alt="" height="11" width="28"> Notas Parciais</a></button></li>
 						<!--<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 3 - Arquitetura de SW.pptx"> Aula 3 - Arquitetura de Software</a></button></li>
