adicao da especificacao do trab de modelagem (pds2)

--- a/gsi538.html
+++ b/gsi538.html
@@ -85,7 +85,7 @@
 					<b>Avaliação:</b>
 					<ul>
 					<li>Prova 1 - 35 pts <b>(30/04)</b></li>
-					<li>Trabalho (Modelagem) - 25 pts <b>(18/06)</b></li>
+					<li>Trabalho (Modelagem) - 25 pts <b>(18/06)</b> <a href="aulas/gsi538/trab_modelagem.pdf"><img src="images/new2.gif" alt="" height="11" width="28"> --> <i>Descrição do trabalho</i></a>
 					<li>Trabalho (Implementação) - 40 pts <b>(09/07)</b></li>
 					</ul>
 					</div>
