atualizacao dos sites das disciplinas de esof e modelagem de sw

--- a/gsi526.html
+++ b/gsi526.html
@@ -113,6 +113,8 @@
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 11 - Papel_Arquiteto_Software.pptx"> Aula 11 - O Papel do Arquiteto de Software</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 12 - WebMVCePatterns.pdf"> Aula 12 - O Padrão Web MVC (Model-View-Controller)</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 13 - SistemasDeControleDeVersao.pdf"> Aula 13 - Sistemas de Controle de Versão</a></button></li>
+						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 14 - Classes E Relacionamentos.pdf"> Aula 14 - Classes e Relacionamentos</a></button></li>
+						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 14 - Idiomas de Programação.pdf"> Aula 14 - Idiomas de Programação</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/seminario_esof.pdf"> <img src="images/new2.gif" alt="" height="11" width="28"> Seminário</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/notas_esof_2019_1.pdf"> <img src="images/new2.gif" alt="" height="11" width="28"> Notas Parciais</a></button></li>
 						<!--<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 3 - Arquitetura de SW.pptx"> Aula 3 - Arquitetura de Software</a></button></li>
