Adicao da aula de Membros de Classes/Metodos Estaticos no site de GSI526

--- a/gsi526.html
+++ b/gsi526.html
@@ -115,6 +115,7 @@
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 13 - SistemasDeControleDeVersao.pdf"> Aula 13 - Sistemas de Controle de Versão</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 14 - Classes E Relacionamentos.pdf"> Aula 14 - Classes e Relacionamentos</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 14 - Idiomas de Programação.pdf"> Aula 14 - Idiomas de Programação</a></button></li>
+						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 15 - Membros de Classes.pdf"> Aula 15 - Membros de Classes</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/seminario_esof.pdf"> <img src="images/new2.gif" alt="" height="11" width="28"> Seminário</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/notas_esof_2019_1.pdf"> <img src="images/new2.gif" alt="" height="11" width="28"> Notas Parciais</a></button></li>
 						<!--<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 3 - Arquitetura de SW.pptx"> Aula 3 - Arquitetura de Software</a></button></li>
