coloquei uma msg avisando sobre os seminarios no lab de IHC

--- a/gsi526.html
+++ b/gsi526.html
@@ -87,7 +87,7 @@
 					<li>Prova 1 - 25 pts <b>(10/04)</b></li>
 					<li>Prova 2 - 30 pts <b>(23/05)</b> - <i> Aulas 8, 9, 10 e 11</i></li>
 					<li>Prova 3 - 30 pts <b>(04/07)</b></li>
-					<li>Seminário - 15 pts <b>(12/06, 13/06 e 19/06)</b></li>
+					<li>Seminário - 15 pts <b>(12/06, 13/06, 17/06 e 19/06)</b> -> <i> Dia 17/06 no Lab. de IHC a partir das 16h</i></li>
 					</ul>
 					</div>
 					<b>Material:</b>
