--- a/gsi526.html
+++ b/gsi526.html
@@ -85,8 +85,8 @@
 					<b>Avaliação:</b>
 					<ul>
 					<li>Prova 1 - 25 pts <b>(10/04)</b></li>
-					<li>Prova 2 - 30 pts <b>(23/05)</b> - <i> Aulas 8, 9, 10 e 11</i></li>
-					<li>Prova 3 - 30 pts <b>(04/07)</b></li>
+					<li>Prova 2 - 30 pts <b>(23/05)</b></li>
+					<li>Prova 3 - 30 pts <b>(04/07)</b> - <i> Aulas 12, 13, 14, 15 e 16</i></li>
 					<li>Seminário - 15 pts <b>(12/06, 13/06, 17/06 e 19/06)</b> -> <i> Dia 17/06 no Lab. de IHC a partir das 16h</i></li>
 					</ul>
 					</div>
@@ -116,6 +116,7 @@
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 14 - Classes E Relacionamentos.pdf"> Aula 14 - Classes e Relacionamentos</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 14 - Idiomas de Programação.pdf"> Aula 14 - Idiomas de Programação</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 15 - Membros de Classes.pdf"> Aula 15 - Membros de Classes</a></button></li>
+						<li><i class="icon-book"></i><a href="aulas/gsi526/PadroesGoF.pdf"> Aula 16 - Padrões de Projeto</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/seminario_esof.pdf"> <img src="images/new2.gif" alt="" height="11" width="28"> Seminário</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/notas_esof_2019_1.pdf"> <img src="images/new2.gif" alt="" height="11" width="28"> Notas Parciais</a></button></li>
 						<!--<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 3 - Arquitetura de SW.pptx"> Aula 3 - Arquitetura de Software</a></button></li>
