--- a/gsi526.html
+++ b/gsi526.html
@@ -117,6 +117,7 @@
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 14 - Idiomas de Programação.pdf"> Aula 14 - Idiomas de Programação</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 15 - Membros de Classes.pdf"> Aula 15 - Membros de Classes</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/PadroesGoF.pdf"> Aula 16 - Padrões de Projeto</a></button></li>
+						<li><i class="icon-book"></i><a href="aulas/gsi526/lista_exercicios_esof.pdf"> <img src="images/new2.gif" alt="" height="11" width="28"> Lista de Exercícios</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/seminario_esof.pdf"> <img src="images/new2.gif" alt="" height="11" width="28"> Seminário</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/notas_esof_2019_1.pdf"> <img src="images/new2.gif" alt="" height="11" width="28"> Notas Parciais</a></button></li>
 						<!--<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 3 - Arquitetura de SW.pptx"> Aula 3 - Arquitetura de Software</a></button></li>
