adicao da materia da prova 3 de modelagem

--- a/gsi522.html
+++ b/gsi522.html
@@ -86,7 +86,7 @@
 					<ul>
 					<li>Prova 1 - 25 pts <b>(09/04)</b></li>
 					<li>Prova 2 - 25 pts <b>(15/05)</b> - <i> Aulas 5, 6, 7 e 8</i></li>
-					<li>Prova 3 - 25 pts <b>(03/07)</b></li>
+					<li>Prova 3 - 25 pts <b>(03/07)</b> - <i> Aulas 9, 10, 11 e 12</i></li>
 					<li>Trabalho - 25 pts <b>(09/07)</b></li>
 					</ul>
 					</div>
