notas finais de esof

--- a/gsi526.html
+++ b/gsi526.html
@@ -120,7 +120,7 @@
 						<li><i class="icon-book"></i><a href="aulas/gsi526/lista_exercicios_esof.pdf"> <img src="images/new2.gif" alt="" height="11" width="28"> Lista de Exercícios</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/slides_seminarios.rar"> <img src="images/new2.gif" alt="" height="11" width="28"> Slides dos Seminários</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/seminario_esof.pdf"> <img src="images/new2.gif" alt="" height="11" width="28"> Seminário</a></button></li>
-						<li><i class="icon-book"></i><a href="aulas/gsi526/notas_esof_2019_1.pdf"> <img src="images/new2.gif" alt="" height="11" width="28"> Notas Parciais</a></button></li>
+						<li><i class="icon-book"></i><a href="aulas/gsi526/notas_esof_2019_1.pdf"> <img src="images/new2.gif" alt="" height="11" width="28"> <b>Notas Finais</b></a></button></li>
 						<!--<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 3 - Arquitetura de SW.pptx"> Aula 3 - Arquitetura de Software</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 8-Reuso-Parte1.ppt"> Aula 8 - Reuso de Software (Parte 1)</a></button></li>						
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 8-Reuso-Parte2.pdf"> Aula 8 - Reuso de Software (Parte 2)</a></button></li>
