notas finais de modelagem

--- a/gsi522.html
+++ b/gsi522.html
@@ -107,7 +107,7 @@
 						<li><i class="icon-book"></i><a href="aulas/gsi522/Aula10 - Componentes_Implantacao.pdf"> Aula 10 - Diagramas de Componentes e Implantação</a></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi522/Aula11 - Scrum.pdf"> Aula 11 - Scrum</a></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi522/Aula12- Extreme Programming.pdf"> Aula 12 - Programação Extrema (XP)</a></li>
-						<li><i class="icon-book"></i><a href="aulas/gsi522/notas_modelagem_2019_1.pdf"> <img src="images/new2.gif" alt="" height="11" width="28"> Notas da Prova 3 </a></button></li>
+						<li><i class="icon-book"></i><a href="aulas/gsi522/notas_modelagem_2019_1.pdf"> <img src="images/new2.gif" alt="" height="11" width="28"><b> Notas Finais</b></a></button></li>
 						<!--<li><i class="icon-book"></i><a href="aulas/gsi522/Aula3 - Casos de Uso.pptx"> Aula 3 - Diagrama de Casos de Uso</a></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi522/Aula4 - Diagrama de Classes.pptx"> Aula 4 - Diagrama de Classes</a></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi522/Aula5 - SequênciaComunicação.pptx"> Aula 5 - Diagramas de Sequência e Comunicação</a></li>
