notas finais de pds2

--- a/gsi538.html
+++ b/gsi538.html
@@ -100,7 +100,7 @@
 						<li><i class="icon-book"></i><a href="aulas/gsi538/Aula 6 - Diagrama de Classes.pptx"> Aula 6 - Diagrama de Classes</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi538/Aula 7 - SequenciaComunicacao.pptx"> Aula 7 - Diagramas de Sequência e Comunicação</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi538/Aula 8 - PHP e MySQL.pdf"> Aula 8 - Web Dinâmica com PHP e MySQL</a></button></li>
-						<li><i class="icon-book"></i><a href="aulas/gsi538/notas_pds2_2019_1.pdf"> <img src="images/new2.gif" alt="" height="11" width="28"> Notas do Trabalho (Modelagem) </a></button></li>
+						<li><i class="icon-book"></i><a href="aulas/gsi538/notas_pds2_2019_1.pdf"> <img src="images/new2.gif" alt="" height="11" width="28"><b> Notas Finais</b></a></button></li>
 						<!--<li><i class="icon-book"></i><a href="aulas/gsi538/Aula 5 - Casos de Uso.pptx"> Aula 5 - Diagrama de Casos de Uso</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi530/aula3.pdf"> Aula 3</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi530/aula4.pdf"> Aula 4</a></button></li>
